--- a/Task-1-HTML-CSS/package.json
+++ b/Task-1-HTML-CSS/package.json
@@ -4,14 +4,10 @@
   "description": "A responsive webpage with an interactive dark mode toggle.",
   "main": "index.html",
   "scripts": {
-    "start": "live-server",
-    "test": "jest"
+    "start": "live-server"
   },
   "author": "Akbar Khawaja",
   "devDependencies": {
-    "jest": "^29.7.0",
-    "jest-puppeteer": "^10.1.4",
-    "live-server": "^1.2.2",
-    "puppeteer": "^23.9.0"
+    "live-server": "^1.2.2"
   }
 }
